feat(agent-core): add parallel tool dual ordering
- Serialize tool preparation while emitting completions in finish order.
- Restore source order for transcript state and atomically reduce events.
- Drain accepted updates and add deterministic concurrency coverage.